# hint

./: .gitignore  Cargo.toml  README.md  documentation.md  hello_world.ht
assests/: this assests folder is not included in the src of hint
src/: compiler.rs  hint.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  target.rs
src-archive/: dom.rs  native.rs
src-archive/dom/: dom_glue.js  elements.rs  events.rs  query.rs  render.rs  styles.rs
src-archive/ffi/: c.rs  js.rs  mod.rs  rust.rs  types.rs  wasm.rs
src-archive/memory/: alloc.rs  arc.rs  gc_hooks.rs  stack.rs
src-archive/optimizations/: constant_fold.rs  dce.rs  inline.rs  inst_combine.rs  loop_opt.rs  mem_opt.rs  mod.rs  pipeline.rs
src-archive/package/: build.rs  config.rs  deps.rs  mod.rs  publish.rs  registry.rs
src-archive/types/: checker.rs  context.rs  infer.rs  mod.rs  traits.rs  types.rs  unify.rs
src/codegen/: mod.rs
src/codegen/native/: abi.rs  emitter.rs  frame.rs  lower.rs  mod.rs  runtime.rs
src/codegen/wasm/: mod.rs
src/diagnostics/: codes.rs  diagnostic.rs  engine.rs  mod.rs  render.rs  suggestions.rs
src/ir/: mod.rs
src/semantics/: checker.rs  error.rs  memory.rs  mod.rs  symbols.rs  types.rs
src/stdlib/: core.rs  io.rs  mod.rs  net.rs  wasm.rs
tests/: fibonacci.ht
