[package]
name = "hintc"
version = "0.2.0"
edition = "2021"
description = "Hint Language Compiler - Zero-dependency native and WebAssembly compiler"
authors = ["Hint Language Team"]
license = "MIT"
repository = "https://github.com/hint-lang/hintc"
keywords = ["compiler", "hint", "webassembly", "cranelift", "native"]
categories = ["compilers", "development-tools", "wasm"]

[lib]
name = "hintc"
path = "src/lib.rs"

[[bin]]
name = "hintc"
path = "src/main.rs"

[dependencies]
# Cranelift for zero-dependency code generation
cranelift = "0.110"
cranelift-codegen = "0.110"
cranelift-frontend = "0.110"
cranelift-object = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }
cranelift-module = "0.110"
cranelift-jit = { version = "0.110", optional = true }

# WebAssembly support
wasmtime-cranelift = { version = "23.0", optional = true }
wasmparser = { version = "0.212", optional = true }
wasm-encoder = { version = "0.212", optional = true }

# Object file handling
object = { version = "0.36", optional = true }

# Target detection and triple parsing
target-lexicon = "0.12"

# LSP support
lsp-types = "0.94"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Path handling
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.10"
insta = "1.38"

[features]
default = ["native", "wasm"]
native = ["cranelift-native", "cranelift-object", "object"]
wasm = ["wasmtime-cranelift", "wasmparser", "wasm-encoder"]
jit = ["cranelift-jit"]
full = ["native", "wasm", "jit"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
